feat: implement main GUI application structure (task 12.1)
- Add MainWindow with tabbed interface and file browser
- Implement FileBrowser widget with drag-and-drop PDF support
- Create OperationTabs for PDF operations and content extraction
- Add ProgressDialog with cancellation support for long operations
- Include GUI application launcher with dependency checking
- Add comprehensive unit tests for GUI components
- Update pyproject.toml with GUI entry point and PyQt6 dependency
- Support file selection, operation execution, and progress tracking

Completes task 12.1: Create main GUI application structure

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,6 +105,7 @@ Changelog = "https://github.com/siva4it/smart-pdf-toolkit/blob/main/CHANGELOG.md
 [project.scripts]
 smart-pdf = "smart_pdf_toolkit.cli.main:main"
 smart-pdf-api = "smart_pdf_toolkit.api.main:main"
+smart-pdf-gui = "smart_pdf_toolkit.gui.app:main"
 
 [project.entry-points."smart_pdf_toolkit.plugins"]
 # Plugin entry points will be registered here
