fix: resolve remaining GitHub build failures
- Add missing psutil>=5.9.0 dependency for API health monitoring
- Rename TestConverter to MockConverter to avoid pytest collection issues
- Fix PytestCollectionWarning: cannot collect test class with __init__ constructor
- Update all references to use MockConverter consistently

Resolves:
- ModuleNotFoundError: No module named 'psutil' in API tests
- PytestCollectionWarning for TestConverter class naming conflict

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ dependencies = [
     "python-jose[cryptography]>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
     "pydantic-settings>=2.0.0",
+    "psutil>=5.9.0",
     
     # CLI dependencies
     "click>=8.1.0",
