Fix pytest.ini configuration syntax
- Change [tool:pytest] to [pytest] for proper INI format
- Fix collect_ignore syntax to use proper INI list format
- Resolves pytest configuration parsing error in CI

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
-[tool:pytest]
+[pytest]
 # Pytest configuration
 addopts = -v --tb=short --strict-markers
 testpaths = tests
@@ -17,8 +17,7 @@ markers =
     skip_ci: skip in CI environment
 
 # Ignore specific test files that have interface mismatches
-collect_ignore = [
-    "tests/test_format_converter.py",
-    "tests/test_format_converter_integration.py", 
-    "tests/test_format_converter_office_integration.py"
-]
+collect_ignore = 
+    tests/test_format_converter.py
+    tests/test_format_converter_integration.py
+    tests/test_format_converter_office_integration.py
